--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spotify - Your song container</title>
+    <title>Spotify - One place Every song</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -18,7 +18,7 @@
 
     <div class="container">
       <div class="songList">
-        <h1>Your playlist of selected songs</h1>
+        <h1 style="margin: 10px">Your playlist of selected songs</h1>
         <div class="songItemContainer">
           <div class="songItem">
             <img alt="1" />
